# past-projects

cpp/: CMakeLists.txt  main.cpp
cpp/Entities/Companions/: Companion.cpp  Companion.h  CompanionList.cpp  CompanionList.h
cpp/Entities/Contestants/: Contestant.cpp  Contestant.h  Enemy.h  Player.cpp  Player.h
java/gameoflife/: readme.txt
java/gameoflife/src/: GameOfLife.java
java/network/: CommunicationHandler.java  ConnectionThread.java  DatabaseClient.java  DatabaseNode.java  README.txt
java/warehouse/src/: Category.java  Delivery.java  InboundDelivery.java  InboundDeliveryDelivered.java  InboundDeliveryStatus.java  InboundDeliveryUndelivered.java  Main.java  Merchandise.java  OutboundDelivery.java  OutboundDeliveryNotSent.java  OutboundDeliverySent.java  OutboundDeliveryStatus.java  ShippingCompany.java  SystemAdministrator.java  Transport.java  Update.java  User.java  Utils.java  WarehouseGUI.java  WarehouseManagementGUI.java  WarehouseWorker.java
js/nest-quiz-app/: README.md  package-lock.json  package.json
js/nest-quiz-app/src/: app.module.ts
js/nest-quiz-app/src/answers/: answer.entity.ts  answers.module.ts  answers.resolver.ts  answers.service.ts
js/nest-quiz-app/src/questions/: questions.entity.ts  questions.module.ts  questions.resolver.ts  questions.service.ts
js/nest-quiz-app/src/quizzes/: quiz.entity.ts  quizzes.module.ts  quizzes.resolver.ts  (+2 more)
js/twitter/: background.js  content.js  manifest.json  popup.html  popup.js
python/discord bot/: application.yml  config.py  flairebot.py
python/discord bot/cogs/: commands.py  music.py
(+10 files in other folders)
